--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,6 +384,11 @@ body.page-navbar-fixed-top-sm {
     background: url(../img/OAPN5353.JPG) no-repeat bottom center !important;
 }
 
+.content-bg.services{
+    background: url(../img/20190814_083200.jpg) no-repeat center !important;
+    background-size: cover !important;
+}
+
 .content.has-bg .content-bg img {
     max-width: 100%;
 }
@@ -475,6 +480,12 @@ body.page-navbar-fixed-top-sm {
 ------------------------------- */
 
 /* 5.1 About Us Author Setting */
+#about .about-image{
+    width: 100%;
+    height: 30rem;
+    background: url(../img/about.jpg) no-repeat center !important;
+    background-size: cover !important;
+}
 
 .about-author {
     position: relative;
@@ -1499,14 +1510,14 @@ a.text-white:focus {
     -moz-border-radius: 3px;
     border-radius: 3px;
 }
-.btn.btn-outline {
-    color: #fff;
+.btn.btn-outline-danger {
+    /* color: #fff; */
     border-width: 2px;
-    border-color: #8F8E8E;
+    border-color: #ff5b57;
     background: none;
 }
-.btn.btn-outline:hover,
-.btn.btn-outline:focus {
+.btn.btn-outline-danger:hover,
+.btn.btn-outline-danger:focus {
     border-color: #fff;
 }
 .btn:focus, 
